--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,7 +9,7 @@ const structuredData = {
   "@type": "WebPage",
   "name": "Page Not Found",
   "description": "The page you're looking for doesn't exist.",
-  "url": "https://drkmortho.com/404"
+  "url": "https://drkarthikmanchala.com/404"
 };
 ---
 
