--- a/src/pages/arthroscopy-manikonda.astro
+++ b/src/pages/arthroscopy-manikonda.astro
@@ -14,13 +14,13 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://drkmortho.com/"
+      "item": "https://drkarthikmanchala.com/"
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "Arthroscopy Manikonda",
-      "item": "https://drkmortho.com/arthroscopy-manikonda"
+      "item": "https://drkarthikmanchala.com/arthroscopy-manikonda"
     }
   ]
 };
@@ -89,7 +89,7 @@ const pageStructuredData = {
     {
       "@type": "WebPage",
       "name": "Best Arthroscopy Surgeon in Manikonda",
-      "url": "https://drkmortho.com/arthroscopy-manikonda"
+      "url": "https://drkarthikmanchala.com/arthroscopy-manikonda"
     }
   ]
 };
