--- a/src/pages/cases.astro
+++ b/src/pages/cases.astro
@@ -41,13 +41,13 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://drkmortho.com/"
+      "item": "https://drkarthikmanchala.com/"
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "Before & After Cases",
-      "item": "https://drkmortho.com/cases"
+      "item": "https://drkarthikmanchala.com/cases"
     }
   ]
 };
@@ -60,7 +60,7 @@ const casesPageStructuredData = {
       "@type": "WebPage",
       "name": "Before & After Cases - Dr. Karthik Manchala",
       "description": "View successful orthopaedic treatment outcomes including knee replacement, hip replacement, fracture fixation, and more.",
-      "url": "https://drkmortho.com/cases"
+      "url": "https://drkarthikmanchala.com/cases"
     },
     {
       "@type": "ImageGallery",
