--- a/src/pages/hip-replacement-manikonda.astro
+++ b/src/pages/hip-replacement-manikonda.astro
@@ -14,13 +14,13 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://drkmortho.com/"
+      "item": "https://drkarthikmanchala.com/"
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "Hip Replacement Manikonda",
-      "item": "https://drkmortho.com/hip-replacement-manikonda"
+      "item": "https://drkarthikmanchala.com/hip-replacement-manikonda"
     }
   ]
 };
@@ -89,7 +89,7 @@ const pageStructuredData = {
     {
       "@type": "WebPage",
       "name": "Best Hip Replacement Surgeon in Manikonda",
-      "url": "https://drkmortho.com/hip-replacement-manikonda"
+      "url": "https://drkarthikmanchala.com/hip-replacement-manikonda"
     }
   ]
 };
