--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -46,13 +46,13 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       position: 1,
       name: "Home",
-      item: "https://drkmortho.com/",
+      item: "https://drkarthikmanchala.com/",
     },
     {
       "@type": "ListItem",
       position: 2,
       name: "Services",
-      item: "https://drkmortho.com/services",
+      item: "https://drkarthikmanchala.com/services",
     },
   ],
 };
@@ -66,7 +66,7 @@ const servicesPageStructuredData = {
       name: "Orthopaedic Services in Manikonda",
       description:
         "Knee replacement, hip replacement, arthroscopy, fracture treatment and sports injury care in Manikonda, Hyderabad.",
-      url: "https://drkmortho.com/services",
+      url: "https://drkarthikmanchala.com/services",
     },
   ],
 };
