--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ interface Props {
   structuredData?: object;
 }
 
-const BASE_URL = "https://drkmortho.com";
+const BASE_URL = "https://drkarthikmanchala.com/";
 const DEFAULT_IMAGE = `${BASE_URL}/og-image.jpg`;
 
 const {
@@ -76,8 +76,8 @@ const url = `${BASE_URL}${canonicalUrl}`;
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content={ogImage} />
     <meta name="twitter:image:alt" content={title} />
-    <meta name="twitter:creator" content="@drkmortho" />
-    <meta name="twitter:site" content="@drkmortho" />
+    <meta name="twitter:creator" content="@https://drkarthikmanchala.com/" />
+    <meta name="twitter:site" content="@https://drkarthikmanchala.com/" />
 
     {/* Additional Search Engine Tags */}
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
