--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ interface Props {
   structuredData?: object;
 }
 
-const BASE_URL = "https://drkarthikmanchala.com/";
+const BASE_URL = "https://drkarthikmanchala.com";
 const DEFAULT_IMAGE = `${BASE_URL}/og-image.jpg`;
 
 const {
@@ -75,8 +75,8 @@ const url = `${BASE_URL}${canonicalUrl}`;
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content={ogImage} />
     <meta name="twitter:image:alt" content={title} />
-    <meta name="twitter:creator" content="@https://drkarthikmanchala.com/" />
-    <meta name="twitter:site" content="@https://drkarthikmanchala.com/" />
+    <meta name="twitter:creator" content="@drkarthik" />
+    <meta name="twitter:site" content="@drkarthik" />
 
     {/* Additional Search Engine Tags */}
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
