--- a/src/pages/cases.astro
+++ b/src/pages/cases.astro
@@ -41,7 +41,7 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://drkarthikmanchala.com/"
+      "item": "https://drkarthikmanchala.com"
     },
     {
       "@type": "ListItem",
