--- a/src/pages/knee-replacement-manikonda.astro
+++ b/src/pages/knee-replacement-manikonda.astro
@@ -14,7 +14,7 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://drkarthikmanchala.com/"
+      "item": "https://drkarthikmanchala.com"
     },
     {
       "@type": "ListItem",
