--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -46,7 +46,7 @@ const breadcrumbSchema = {
       "@type": "ListItem",
       position: 1,
       name: "Home",
-      item: "https://drkarthikmanchala.com/",
+      item: "https://drkarthikmanchala.com",
     },
     {
       "@type": "ListItem",
